syntax = "proto3";

message Empolyee {
  string name = 1;
  int32 sex = 2;
  string id = 3;
  int32 age = 4;
  string phone = 5;
  string department = 6;
  string profile = 7;
}

message AddEmpolyeeRequest { Empolyee empolyee = 1; }

message AddEmpolyeeResponse { string message = 1; }

service EmpolyeeService {
  rpc AddEmpolyee(AddEmpolyeeRequest) returns (AddEmpolyeeResponse);
}
