syntax = "proto3";
package api;
message TestRequest { string request = 1; }
message TestResponse { string response = 1; }

service EmployeeService { rpc Test(TestRequest) returns (TestResponse); }
